# MinkowskiEngine

./: CMakeLists.txt  setup.py
MinkowskiEngine/: MinkowskiCommon.py  MinkowskiCoordinateManager.py  MinkowskiKernelGenerator.py  MinkowskiTensorField.py
MinkowskiEngine/utils/: quantization.py
pybind/: extern.hpp  minkowski.cpp  minkowski.cu
src/: allocators.cuh  broadcast_cpu.cpp  broadcast_gpu.cu  broadcast_kernel.cu  broadcast_kernel.cuh  broadcast_kernel.hpp  common.hpp  convolution_cpu.cpp  convolution_gpu.cu  convolution_kernel.cu  convolution_kernel.cuh  convolution_kernel.hpp  convolution_transpose_cpu.cpp  convolution_transpose_gpu.cu  coordinate.hpp  coordinate_map.hpp  coordinate_map_cpu.hpp  coordinate_map_functors.cuh  coordinate_map_gpu.cu  coordinate_map_gpu.cuh  coordinate_map_key.hpp  coordinate_map_manager.cpp  coordinate_map_manager.cu  coordinate_map_manager.hpp  depthwise_convolution_gpu.cu  depthwise_convolution_kernel.cu  depthwise_convolution_kernel.cuh  direct_max_pool.cpp  dispatcher.hpp  errors.hpp  global_pooling_cpu.cpp  global_pooling_gpu.cu  gpu.cu  gpu.cuh  interpolation_cpu.cpp  interpolation_gpu.cu  interpolation_kernel.hpp  kernel_map.cuh  kernel_map.hpp  kernel_region.hpp  (+24 more)
src/primitives/: small_vector.hpp
tests/cpp/: coordinate_map_cpu_test.cpp  coordinate_map_gpu_test.cu  kernel_region_cpu_test.cpp  kernel_region_gpu_test.cu
tests/python/: spmm.py
